// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter should render correctly when is disabled 1`] = `
Array [
  ".buttonGroup-0-2-1 {
  width: fit-content;
  border: 1px solid #bbbbbb;
  display: flex;
  margin-top: 4px;
  border-radius: 4px;
}
.buttonGroup-0-2-1 button {}
.buttonLeft-0-2-2 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}
.buttonRigth-0-2-3 {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}
.inputBase-0-2-4 {
  color: #000000;
  width: 40px;
  cursor: default;
  height: 100%;
  outline: none;
  padding: 0;
  border-top: none;
  text-align: center;
  border-left: 1px solid #bbbbbb;
  border-right: 1px solid #bbbbbb;
  border-bottom: none;
  background-color: transparent;
}
.buttonGroup-d0-0-2-5 {
  height: 40px;
}
.buttonGroup-d0-0-2-5 button {
  width: 32px;
}
.sharedRippleEffect-0-2-12 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-13 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-13:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-13:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-14 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-15 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-16 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-17 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-18 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-18:focus:after {  }
  .wrapper-d0-0-2-18:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-19 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-20 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-21 {
    animation: keyframes-ripple-0-2-17 300ms;
  }
  .wrapper-d4-0-2-25 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d4-0-2-25:focus:after {  }
  .wrapper-d4-0-2-25:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-26 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-27 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-28 {
    animation: keyframes-ripple-0-2-17 300ms;
  }
  .button-0-2-6 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-6:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-6:hover:not([disabled]) {  }
  .button-0-2-6:focus:not([disabled]) {  }
  .labelContainer-0-2-7 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-8 {
    overflow: hidden;
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-9 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-9:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d0-0-2-9:hover:not([disabled]) {
    background-color: #f1f3f5;
  }
  .button-d0-0-2-9:focus:not([disabled]) {
    background-color: #e9ecef;
  }
  .labelContainer-d1-0-2-10 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-11 {  }
  .button-d3-0-2-22 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d3-0-2-22:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d3-0-2-22:hover:not([disabled]) {
    background-color: #f1f3f5;
  }
  .button-d3-0-2-22:focus:not([disabled]) {
    background-color: #e9ecef;
  }
  .labelContainer-d4-0-2-23 {
    flex-direction: row-reverse;
  }
  .label-d5-0-2-24 {  }",
  <div>
    <div>
      <div
        class="buttonGroup-0-2-1 buttonGroup-d0-0-2-5"
      >
        <div
          class="wrapper-0-2-13 wrapper-d0-0-2-18"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-15 rippleContainer-d2-0-2-20"
          >
            <div
              class="ripple-0-2-14 ripple-d1-0-2-19 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="button-0-2-6 button-d0-0-2-9 buttonLeft-0-2-2"
            data-testid="onDecrement-btn"
            disabled=""
            type="button"
          >
            <div
              class="labelContainer-0-2-7 labelContainer-d1-0-2-10"
            >
              <span
                class="label-0-2-8 label-d2-0-2-11"
              >
                -
              </span>
            </div>
          </button>
        </div>
        <input
          class="inputBase-0-2-4"
          readonly=""
          value="0"
        />
        <div
          class="wrapper-0-2-13 wrapper-d4-0-2-25"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-15 rippleContainer-d6-0-2-27"
          >
            <div
              class="ripple-0-2-14 ripple-d5-0-2-26 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="button-0-2-6 button-d3-0-2-22 buttonRigth-0-2-3"
            data-testid="onIncrement-btn"
            disabled=""
            type="button"
          >
            <div
              class="labelContainer-0-2-7 labelContainer-d4-0-2-23"
            >
              <span
                class="label-0-2-8 label-d5-0-2-24"
              >
                +
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Counter should render correctly with default props 1`] = `
Array [
  ".buttonGroup-0-2-1 {
  width: fit-content;
  border: 1px solid #bbbbbb;
  display: flex;
  margin-top: 4px;
  border-radius: 4px;
}
.buttonGroup-0-2-1 button {}
.buttonLeft-0-2-2 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}
.buttonRigth-0-2-3 {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}
.inputBase-0-2-4 {
  color: #000000;
  width: 40px;
  cursor: default;
  height: 100%;
  outline: none;
  padding: 0;
  border-top: none;
  text-align: center;
  border-left: 1px solid #bbbbbb;
  border-right: 1px solid #bbbbbb;
  border-bottom: none;
  background-color: transparent;
}
.buttonGroup-d0-0-2-5 {
  height: 40px;
}
.buttonGroup-d0-0-2-5 button {
  width: 32px;
}
.sharedRippleEffect-0-2-12 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-13 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-13:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-13:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-14 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-15 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-16 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-17 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-18 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-18:focus:after {  }
  .wrapper-d0-0-2-18:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-19 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-20 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-21 {
    animation: keyframes-ripple-0-2-17 300ms;
  }
  .wrapper-d4-0-2-25 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d4-0-2-25:focus:after {
    background-color: #000000;
  }
  .wrapper-d4-0-2-25:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-26 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-27 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-28 {
    animation: keyframes-ripple-0-2-17 300ms;
  }
  .button-0-2-6 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-6:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-6:hover:not([disabled]) {  }
  .button-0-2-6:focus:not([disabled]) {  }
  .labelContainer-0-2-7 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-8 {
    overflow: hidden;
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-9 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-9:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d0-0-2-9:hover:not([disabled]) {
    background-color: #f1f3f5;
  }
  .button-d0-0-2-9:focus:not([disabled]) {
    background-color: #e9ecef;
  }
  .labelContainer-d1-0-2-10 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-11 {  }
  .button-d3-0-2-22 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d3-0-2-22:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d3-0-2-22:hover:not([disabled]) {
    background-color: #f1f3f5;
  }
  .button-d3-0-2-22:focus:not([disabled]) {
    background-color: #e9ecef;
  }
  .labelContainer-d4-0-2-23 {
    flex-direction: row-reverse;
  }
  .label-d5-0-2-24 {  }",
  <div>
    <div>
      <div
        class="buttonGroup-0-2-1 buttonGroup-d0-0-2-5"
      >
        <div
          class="wrapper-0-2-13 wrapper-d0-0-2-18"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-15 rippleContainer-d2-0-2-20"
          >
            <div
              class="ripple-0-2-14 ripple-d1-0-2-19 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="button-0-2-6 button-d0-0-2-9 buttonLeft-0-2-2"
            data-testid="onDecrement-btn"
            disabled=""
            type="button"
          >
            <div
              class="labelContainer-0-2-7 labelContainer-d1-0-2-10"
            >
              <span
                class="label-0-2-8 label-d2-0-2-11"
              >
                -
              </span>
            </div>
          </button>
        </div>
        <input
          class="inputBase-0-2-4"
          readonly=""
          value="0"
        />
        <div
          class="wrapper-0-2-13 wrapper-d4-0-2-25"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-15 rippleContainer-d6-0-2-27"
          >
            <div
              class="ripple-0-2-14 ripple-d5-0-2-26 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="button-0-2-6 button-d3-0-2-22 buttonRigth-0-2-3"
            data-testid="onIncrement-btn"
            type="button"
          >
            <div
              class="labelContainer-0-2-7 labelContainer-d4-0-2-23"
            >
              <span
                class="label-0-2-8 label-d5-0-2-24"
              >
                +
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Counter should render correctly with label 1`] = `
Array [
  ".label-0-2-6 {
  font-family: Roboto, sans-serif;
  letter-spacing: 0.22px;
}
.label-d0-0-2-7 {
  font-size: 14px;
  color: #777777;
}
.buttonGroup-0-2-1 {
  width: fit-content;
  border: 1px solid #bbbbbb;
  display: flex;
  margin-top: 4px;
  border-radius: 4px;
}
.buttonGroup-0-2-1 button {}
.buttonLeft-0-2-2 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}
.buttonRigth-0-2-3 {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}
.inputBase-0-2-4 {
  color: #000000;
  width: 40px;
  cursor: default;
  height: 100%;
  outline: none;
  padding: 0;
  border-top: none;
  text-align: center;
  border-left: 1px solid #bbbbbb;
  border-right: 1px solid #bbbbbb;
  border-bottom: none;
  background-color: transparent;
}
.buttonGroup-d0-0-2-5 {
  height: 40px;
}
.buttonGroup-d0-0-2-5 button {
  width: 32px;
}
.sharedRippleEffect-0-2-14 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-15 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-15:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-15:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-16 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-17 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-18 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-19 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-20 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-20:focus:after {  }
  .wrapper-d0-0-2-20:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-21 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-22 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-23 {
    animation: keyframes-ripple-0-2-19 300ms;
  }
  .wrapper-d4-0-2-27 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d4-0-2-27:focus:after {
    background-color: #000000;
  }
  .wrapper-d4-0-2-27:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d5-0-2-28 {
    background-color: #000000;
    height: 0;
    left: 0;
    top: 0;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d6-0-2-29 {
    overflow: hidden;
  }
  .rippleActive-d7-0-2-30 {
    animation: keyframes-ripple-0-2-19 300ms;
  }
  .button-0-2-8 {
    cursor: pointer;
    outline: 0;
    overflow: hidden;
    position: relative;
    border-radius: 4px;
  }
  .button-0-2-8:disabled {
    cursor: default;
    box-shadow: none;
  }
  .button-0-2-8:hover:not([disabled]) {  }
  .button-0-2-8:focus:not([disabled]) {  }
  .labelContainer-0-2-9 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .label-0-2-10 {
    overflow: hidden;
    font-size: 14px;
    text-align: center;
    font-family: Roboto, Arial;
    font-weight: 500;
    user-select: none;
    white-space: nowrap;
    text-overflow: ellipsis;
    letter-spacing: 1.23px;
    text-transform: uppercase;
  }
  .button-d0-0-2-11 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d0-0-2-11:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d0-0-2-11:hover:not([disabled]) {
    background-color: #f1f3f5;
  }
  .button-d0-0-2-11:focus:not([disabled]) {
    background-color: #e9ecef;
  }
  .labelContainer-d1-0-2-12 {
    flex-direction: row-reverse;
  }
  .label-d2-0-2-13 {  }
  .button-d3-0-2-24 {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    box-shadow: none;
    color: #333333;
    height: 40px;
    padding-left: 8px;
    padding-right: 8px;
    width: auto;
  }
  .button-d3-0-2-24:disabled {
    background-color: #FFFFFF00;
    border: 1px solid #FFFFFF00;
    color: #777777;
  }
  .button-d3-0-2-24:hover:not([disabled]) {
    background-color: #f1f3f5;
  }
  .button-d3-0-2-24:focus:not([disabled]) {
    background-color: #e9ecef;
  }
  .labelContainer-d4-0-2-25 {
    flex-direction: row-reverse;
  }
  .label-d5-0-2-26 {  }",
  <div>
    <div>
      <label
        class="label-0-2-6 label-d0-0-2-7"
      >
        label
      </label>
      <div
        class="buttonGroup-0-2-1 buttonGroup-d0-0-2-5"
      >
        <div
          class="wrapper-0-2-15 wrapper-d0-0-2-20"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-17 rippleContainer-d2-0-2-22"
          >
            <div
              class="ripple-0-2-16 ripple-d1-0-2-21 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="button-0-2-8 button-d0-0-2-11 buttonLeft-0-2-2"
            data-testid="onDecrement-btn"
            disabled=""
            type="button"
          >
            <div
              class="labelContainer-0-2-9 labelContainer-d1-0-2-12"
            >
              <span
                class="label-0-2-10 label-d2-0-2-13"
              >
                -
              </span>
            </div>
          </button>
        </div>
        <input
          class="inputBase-0-2-4"
          readonly=""
          value="0"
        />
        <div
          class="wrapper-0-2-15 wrapper-d4-0-2-27"
          data-testid="ripple-wrapper"
          tabindex="-1"
        >
          <div
            class="rippleContainer-0-2-17 rippleContainer-d6-0-2-29"
          >
            <div
              class="ripple-0-2-16 ripple-d5-0-2-28 "
              data-testid="ripple-animation"
            />
          </div>
          <button
            class="button-0-2-8 button-d3-0-2-24 buttonRigth-0-2-3"
            data-testid="onIncrement-btn"
            type="button"
          >
            <div
              class="labelContainer-0-2-9 labelContainer-d4-0-2-25"
            >
              <span
                class="label-0-2-10 label-d5-0-2-26"
              >
                +
              </span>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;
